Began fixing layout issues that cropped up over Craft 1.4 update

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -1,8 +1,10 @@
 /* BASE STYLES
 -----------------------------------*/
+/*
 #tab-entries {
 	margin: -30px -30px 0 -30px;
 }
+*/
 
 .no-entries {
 	margin: 30px 30px 0 30px;
@@ -76,6 +78,7 @@ table#entries th.date div {
 	padding: 0 0 0 10px;
 	margin-left: -10px;
 	text-indent: 10px;
+	border-bottom: 0px solid transparent;
 }
 
 table#entries th.padding,
